tests/baselines/reference/tsxAttributeResolution2.errors.txt
file.tsx(13,18): error TS7006: Parameter 'x' implicitly has an 'any' type.
file.tsx(17,21): error TS2339: Property 'leng' does not exist on type 'string'.


==== file.tsx (2 errors) ====
    declare namespace JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		test1: Attribs1;
    	}
    }
    interface Attribs1 {
    	c1?: (x: string) => void;
    }
    
    // OK
    <test1 c1={(x) => x.length} />; // OK
    <test1 data-c1={(x) => x.leng} />; // OK
                     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
    
    // Errors
    <test1 c1={(x) => x.leng} />; // Error, no leng on 'string'
                        ~~~~
!!! error TS2339: Property 'leng' does not exist on type 'string'.
    